--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,28 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/theme": "^2.2.9",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.5",
     "canvas": "^2.11.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.30",
+    "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "socket.io-client": "^4.7.5",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
